# face-rec-with-age-gender

./: CMakeLists.txt  Instructions
include/: TRetina.h
src/: main.cpp
